tests/failure/missing/context.expected
syntax error: expected ">" before "*": line 8, column 12 to line 8, column 12:
    * < F  * --> FF;
           ^

